@@ -17,17 +17,22 @@
 package com.hedera.services.bdd.spec.transactions.node;
 
 import static com.hedera.node.app.hapi.utils.CommonPbjConverters.fromPbj;
+import static com.hedera.services.bdd.junit.hedera.utils.AddressBookUtils.endpointFor;
 import static com.hedera.services.bdd.spec.transactions.TxnUtils.bannerWith;
+import static com.hedera.services.bdd.spec.transactions.TxnUtils.netOf;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.SUCCESS;
 
 import com.google.common.base.MoreObjects;
 import com.google.protobuf.ByteString;
 import com.hedera.hapi.node.state.common.EntityNumber;
+import com.hedera.node.app.hapi.fees.usage.state.UsageAccumulator;
 import com.hedera.node.app.hapi.utils.fee.SigValueObj;
+import com.hedera.services.bdd.junit.hedera.subprocess.SubProcessNetwork;
 import com.hedera.services.bdd.spec.HapiSpec;
+import com.hedera.services.bdd.spec.fees.AdapterUtils;
+import com.hedera.services.bdd.spec.keys.KeyShape;
 import com.hedera.services.bdd.spec.transactions.HapiTxnOp;
 import com.hederahashgraph.api.proto.java.AccountID;
-import com.hederahashgraph.api.proto.java.FeeComponents;
 import com.hederahashgraph.api.proto.java.FeeData;
 import com.hederahashgraph.api.proto.java.HederaFunctionality;
 import com.hederahashgraph.api.proto.java.Key;
@@ -36,13 +41,12 @@ import com.hederahashgraph.api.proto.java.ServiceEndpoint;
 import com.hederahashgraph.api.proto.java.Transaction;
 import com.hederahashgraph.api.proto.java.TransactionBody;
 import edu.umd.cs.findbugs.annotations.NonNull;
+import edu.umd.cs.findbugs.annotations.Nullable;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.function.LongConsumer;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -50,27 +54,34 @@ public class HapiNodeCreate extends HapiTxnOp<HapiNodeCreate> {
     private static final Logger LOG = LogManager.getLogger(HapiNodeCreate.class);
 
     private boolean advertiseCreation = false;
+    private boolean useAvailableSubProcessPorts = false;
     private final String nodeName;
     private Optional<AccountID> accountId = Optional.empty();
     private Optional<String> description = Optional.empty();
-    private List<ServiceEndpoint> gossipEndpoints = Collections.emptyList();
-    private List<ServiceEndpoint> serviceEndpoints = Collections.emptyList();
+    private List<ServiceEndpoint> gossipEndpoints =
+            Arrays.asList(endpointFor("192.168.1.200", 123), endpointFor("192.168.1.201", 123));
+    private List<ServiceEndpoint> grpcEndpoints = Arrays.asList(
+            ServiceEndpoint.newBuilder().setDomainName("test.com").setPort(123).build());
     private Optional<byte[]> gossipCaCertificate = Optional.empty();
     private Optional<byte[]> grpcCertificateHash = Optional.empty();
-    private Optional<LongConsumer> newNumObserver = Optional.empty();
+    private Optional<String> adminKeyName = Optional.empty();
+    private Optional<KeyShape> adminKeyShape = Optional.empty();
+
+    @Nullable
+    private Key adminKey;
 
     public HapiNodeCreate(@NonNull final String nodeName) {
         this.nodeName = nodeName;
     }
 
     @Override
-    public HederaFunctionality type() {
-        return HederaFunctionality.NodeCreate;
+    protected Key lookupKey(final HapiSpec spec, final String name) {
+        return name.equals(nodeName) ? adminKey : spec.registry().getKey(name);
     }
 
-    public HapiNodeCreate exposingNumTo(@NonNull final LongConsumer obs) {
-        newNumObserver = Optional.of(obs);
-        return this;
+    @Override
+    public HederaFunctionality type() {
+        return HederaFunctionality.NodeCreate;
     }
 
     public HapiNodeCreate advertisingCreation() {
@@ -88,13 +99,18 @@ public class HapiNodeCreate extends HapiTxnOp<HapiNodeCreate> {
         return this;
     }
 
+    public HapiNodeCreate withAvailableSubProcessPorts() {
+        useAvailableSubProcessPorts = true;
+        return this;
+    }
+
     public HapiNodeCreate gossipEndpoint(final List<ServiceEndpoint> gossipEndpoint) {
         this.gossipEndpoints = gossipEndpoint;
         return this;
     }
 
     public HapiNodeCreate serviceEndpoint(final List<ServiceEndpoint> serviceEndpoint) {
-        this.serviceEndpoints = serviceEndpoint;
+        this.grpcEndpoints = serviceEndpoint;
         return this;
     }
 
@@ -106,6 +122,20 @@ public class HapiNodeCreate extends HapiTxnOp<HapiNodeCreate> {
     public HapiNodeCreate grpcCertificateHash(final byte[] grpcCertificateHash) {
         this.grpcCertificateHash = Optional.of(grpcCertificateHash);
         return this;
+    }
+
+    public HapiNodeCreate adminKey(final String name) {
+        adminKeyName = Optional.of(name);
+        return this;
+    }
+
+    public HapiNodeCreate adminKey(final Key key) {
+        adminKey = key;
+        return this;
+    }
+
+    private void genKeysFor(final HapiSpec spec) {
+        adminKey = adminKey == null ? netOf(spec, adminKeyName, adminKeyShape) : adminKey;
     }
 
     @Override
@@ -120,24 +150,29 @@ public class HapiNodeCreate extends HapiTxnOp<HapiNodeCreate> {
     }
 
     private FeeData usageEstimate(final TransactionBody txn, final SigValueObj svo) {
-        // TODO issue #13670
-        // This is a placeholder implementation until the actual fee estimation is implemented.
-        return FeeData.newBuilder()
-                .setNodedata(FeeComponents.newBuilder().setBpr(0))
-                .setNetworkdata(FeeComponents.newBuilder().setBpr(0))
-                .setServicedata(FeeComponents.newBuilder().setBpr(0))
-                .build();
+        final UsageAccumulator accumulator = new UsageAccumulator();
+        accumulator.addVpt(Math.max(0, svo.getTotalSigCount() - 1));
+        return AdapterUtils.feeDataFrom(accumulator);
     }
 
     @Override
     protected Consumer<TransactionBody.Builder> opBodyDef(@NonNull final HapiSpec spec) throws Throwable {
+        genKeysFor(spec);
+        if (useAvailableSubProcessPorts) {
+            if (!(spec.targetNetworkOrThrow() instanceof SubProcessNetwork subProcessNetwork)) {
+                throw new IllegalStateException("Target is not a SubProcessNetwork");
+            }
+            gossipEndpoints = subProcessNetwork.gossipEndpointsForNextNodeId();
+            grpcEndpoints = List.of(subProcessNetwork.grpcEndpointForNextNodeId());
+        }
         final NodeCreateTransactionBody opBody = spec.txns()
                 .<NodeCreateTransactionBody, NodeCreateTransactionBody.Builder>body(
                         NodeCreateTransactionBody.class, builder -> {
                             accountId.ifPresent(builder::setAccountId);
                             description.ifPresent(builder::setDescription);
-                            builder.addAllGossipEndpoint(gossipEndpoints);
-                            builder.addAllServiceEndpoint(serviceEndpoints);
+                            builder.setAdminKey(adminKey);
+                            builder.clearGossipEndpoint().addAllGossipEndpoint(gossipEndpoints);
+                            builder.clearServiceEndpoint().addAllServiceEndpoint(grpcEndpoints);
                             gossipCaCertificate.ifPresent(s -> builder.setGossipCaCertificate(ByteString.copyFrom(s)));
                             grpcCertificateHash.ifPresent(s -> builder.setGrpcCertificateHash(ByteString.copyFrom(s)));
                         });
@@ -146,9 +181,7 @@ public class HapiNodeCreate extends HapiTxnOp<HapiNodeCreate> {
 
     @Override
     protected List<Function<HapiSpec, Key>> defaultSigners() {
-        // TODO issue #13981
-        // Need to add adminKey also as a signer
-        return Arrays.asList(spec -> spec.registry().getKey(effectivePayer(spec)));
+        return List.of(spec -> spec.registry().getKey(effectivePayer(spec)), ignore -> adminKey);
     }
 
     @Override
@@ -178,5 +211,9 @@ public class HapiNodeCreate extends HapiTxnOp<HapiNodeCreate> {
         final MoreObjects.ToStringHelper helper = super.toStringHelper();
         Optional.ofNullable(lastReceipt).ifPresent(receipt -> helper.add("created", receipt.getNodeId()));
         return helper;
+    }
+
+    public Key getAdminKey() {
+        return adminKey;
     }
 }
